# Vic

./: README.md  requirements.txt  setup.cfg  setup.py
src/vic/: inspect_tools.py  pytorch_model_viewer.py  tracer.py  vic.py  vic2.py  vicstate.py
