[metadata]
name = vic
version = 0.0.1
author = Healbadbad 
author_email = healbadbad@yahoo.com
description = A simple visual debugging tool with minimal dependencies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Healbadbad/Vic
project_urls =
    Bug Tracker = https://github.com/Healbadbad/Vic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src